--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,13 @@
 {
     "name": "tripteki/laravelphp-lint",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "description": "Trip Teknologi's Codebase Convention",
+
+    "readme": "README.md",
+    "license": "MIT",
+    "authors": [ { "name": "Trip Teknologi", "email": "tripteki.company@gmail.com" } ],
+    "homepage": "https://github.com/tripteki/convention-php",
+    "support": { "issues": "https://github.com/tripteki/convention-php/issues" },
 
     "require": {
 
